1999-07-26  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* t/db.t: does not use db_dump while testing

1999-07-23  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* lib/Puppet/Storage.pm: name is now mandatory (sorry for the
	change, but the generated name had a random aspect that preclude
	object to retrieve what they store previously)

1999-05-27  Dominique Dumont  <domi@barrayar.grenoble.hp.com>

	* moved storage handling in Puppet::Storage

1999-01-06  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
v1.011
	* Body.pm: first version after Puppet::Any split

